testdata/baselines/reference/submodule/conformance/moduleExportAlias.errors.txt
a.ts(2,3): error TS2339: Property 'func1' does not exist on type '{}'.
a.ts(3,3): error TS2339: Property 'func2' does not exist on type '{}'.
a.ts(4,3): error TS2339: Property 'func3' does not exist on type '{}'.
a.ts(5,3): error TS2339: Property 'func4' does not exist on type '{}'.
a.ts(6,3): error TS2339: Property 'func5' does not exist on type '{}'.
a.ts(7,3): error TS2339: Property 'func6' does not exist on type '{}'.
a.ts(8,3): error TS2339: Property 'func7' does not exist on type '{}'.
a.ts(9,3): error TS2339: Property 'func8' does not exist on type '{}'.
a.ts(10,3): error TS2339: Property 'func9' does not exist on type '{}'.
a.ts(11,3): error TS2339: Property 'func10' does not exist on type '{}'.
a.ts(12,3): error TS2339: Property 'func11' does not exist on type '{}'.
a.ts(13,3): error TS2339: Property 'func12' does not exist on type '{}'.
a.ts(14,3): error TS2339: Property 'func13' does not exist on type '{}'.
a.ts(15,3): error TS2339: Property 'func14' does not exist on type '{}'.
a.ts(16,3): error TS2339: Property 'func15' does not exist on type '{}'.
a.ts(17,3): error TS2339: Property 'func16' does not exist on type '{}'.
a.ts(18,3): error TS2339: Property 'func17' does not exist on type '{}'.
a.ts(19,3): error TS2339: Property 'func18' does not exist on type '{}'.
a.ts(20,3): error TS2339: Property 'func19' does not exist on type '{}'.
a.ts(21,3): error TS2339: Property 'func20' does not exist on type '{}'.
b.js(2,14): error TS2551: Property 'func1' does not exist on type 'typeof import("b")'. Did you mean 'func11'?
b.js(5,26): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
b.js(7,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
b.js(9,33): error TS2631: Cannot assign to '"b"' because it is a namespace.
b.js(9,43): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
b.js(12,33): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
b.js(13,27): error TS2551: Property 'func6' does not exist on type 'typeof import("b")'. Did you mean 'func16'?
b.js(17,27): error TS2551: Property 'func7' does not exist on type 'typeof import("b")'. Did you mean 'func17'?
b.js(19,53): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
b.js(22,33): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
b.js(22,50): error TS2631: Cannot assign to '"b"' because it is a namespace.
b.js(23,27): error TS2339: Property 'func9' does not exist on type '{}'.
b.js(25,33): error TS2631: Cannot assign to '"b"' because it is a namespace.
b.js(25,43): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
b.js(26,27): error TS2339: Property 'func10' does not exist on type '{}'.
b.js(28,1): error TS2631: Cannot assign to '"b"' because it is a namespace.
b.js(28,11): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
b.js(29,1): error TS2323: Cannot redeclare exported variable 'func11'.
b.js(30,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
b.js(30,1): error TS2323: Cannot redeclare exported variable 'func12'.
b.js(32,1): error TS2631: Cannot assign to '"b"' because it is a namespace.
b.js(32,11): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
b.js(33,1): error TS2323: Cannot redeclare exported variable 'func11'.
b.js(34,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
b.js(34,1): error TS2323: Cannot redeclare exported variable 'func12'.
b.js(36,1): error TS2631: Cannot assign to '"b"' because it is a namespace.
b.js(36,11): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
b.js(38,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
b.js(40,1): error TS2631: Cannot assign to '"b"' because it is a namespace.
b.js(40,11): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
b.js(42,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
b.js(44,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
b.js(44,1): error TS2300: Duplicate identifier 'export='.
b.js(44,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
b.js(44,18): error TS2631: Cannot assign to '"b"' because it is a namespace.
b.js(46,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
b.js(48,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
b.js(48,1): error TS2300: Duplicate identifier 'export='.
b.js(50,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== a.ts (20 errors) ====
    import b = require("./b.js");
    b.func1;
      ~~~~~
!!! error TS2339: Property 'func1' does not exist on type '{}'.
    b.func2;
      ~~~~~
!!! error TS2339: Property 'func2' does not exist on type '{}'.
    b.func3;
      ~~~~~
!!! error TS2339: Property 'func3' does not exist on type '{}'.
    b.func4;
      ~~~~~
!!! error TS2339: Property 'func4' does not exist on type '{}'.
    b.func5;
      ~~~~~
!!! error TS2339: Property 'func5' does not exist on type '{}'.
    b.func6;
      ~~~~~
!!! error TS2339: Property 'func6' does not exist on type '{}'.
    b.func7;
      ~~~~~
!!! error TS2339: Property 'func7' does not exist on type '{}'.
    b.func8;
      ~~~~~
!!! error TS2339: Property 'func8' does not exist on type '{}'.
    b.func9;
      ~~~~~
!!! error TS2339: Property 'func9' does not exist on type '{}'.
    b.func10;
      ~~~~~~
!!! error TS2339: Property 'func10' does not exist on type '{}'.
    b.func11;
      ~~~~~~
!!! error TS2339: Property 'func11' does not exist on type '{}'.
    b.func12;
      ~~~~~~
!!! error TS2339: Property 'func12' does not exist on type '{}'.
    b.func13;
      ~~~~~~
!!! error TS2339: Property 'func13' does not exist on type '{}'.
    b.func14;
      ~~~~~~
!!! error TS2339: Property 'func14' does not exist on type '{}'.
    b.func15;
      ~~~~~~
!!! error TS2339: Property 'func15' does not exist on type '{}'.
    b.func16;
      ~~~~~~
!!! error TS2339: Property 'func16' does not exist on type '{}'.
    b.func17;
      ~~~~~~
!!! error TS2339: Property 'func17' does not exist on type '{}'.
    b.func18;
      ~~~~~~
!!! error TS2339: Property 'func18' does not exist on type '{}'.
    b.func19;
      ~~~~~~
!!! error TS2339: Property 'func19' does not exist on type '{}'.
    b.func20;
      ~~~~~~
!!! error TS2339: Property 'func20' does not exist on type '{}'.
    
    
==== b.js (39 errors) ====
    var exportsAlias = exports;
    exportsAlias.func1 = function () { };
                 ~~~~~
!!! error TS2551: Property 'func1' does not exist on type 'typeof import("b")'. Did you mean 'func11'?
!!! related TS2728 b.js:29:1: 'func11' is declared here.
    exports.func2 = function () { };
    
    var moduleExportsAlias = module.exports;
                             ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    moduleExportsAlias.func3 = function () { };
    module.exports.func4 = function () { };
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
    var multipleDeclarationAlias1 = exports = module.exports;
                                    ~~~~~~~
!!! error TS2631: Cannot assign to '"b"' because it is a namespace.
                                              ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    multipleDeclarationAlias1.func5 = function () { };
    
    var multipleDeclarationAlias2 = module.exports = exports;
                                    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    multipleDeclarationAlias2.func6 = function () { };
                              ~~~~~
!!! error TS2551: Property 'func6' does not exist on type 'typeof import("b")'. Did you mean 'func16'?
!!! related TS2728 b.js:42:1: 'func16' is declared here.
    
    var someOtherVariable;
    var multipleDeclarationAlias3 = someOtherVariable = exports;
    multipleDeclarationAlias3.func7 = function () { };
                              ~~~~~
!!! error TS2551: Property 'func7' does not exist on type 'typeof import("b")'. Did you mean 'func17'?
!!! related TS2728 b.js:45:1: 'func17' is declared here.
    
    var multipleDeclarationAlias4 = someOtherVariable = module.exports;
                                                        ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    multipleDeclarationAlias4.func8 = function () { };
    
    var multipleDeclarationAlias5 = module.exports = exports = {};
                                    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
                                                     ~~~~~~~
!!! error TS2631: Cannot assign to '"b"' because it is a namespace.
    multipleDeclarationAlias5.func9 = function () { };
                              ~~~~~
!!! error TS2339: Property 'func9' does not exist on type '{}'.
    
    var multipleDeclarationAlias6 = exports = module.exports = {};
                                    ~~~~~~~
!!! error TS2631: Cannot assign to '"b"' because it is a namespace.
                                              ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    multipleDeclarationAlias6.func10 = function () { };
                              ~~~~~~
!!! error TS2339: Property 'func10' does not exist on type '{}'.
    
    exports = module.exports = someOtherVariable = {};
    ~~~~~~~
!!! error TS2631: Cannot assign to '"b"' because it is a namespace.
              ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    exports.func11 = function () { };
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2323: Cannot redeclare exported variable 'func11'.
    module.exports.func12 = function () { };
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2323: Cannot redeclare exported variable 'func12'.
    
    exports = module.exports = someOtherVariable = {};
    ~~~~~~~
!!! error TS2631: Cannot assign to '"b"' because it is a namespace.
              ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    exports.func11 = function () { };
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2323: Cannot redeclare exported variable 'func11'.
    module.exports.func12 = function () { };
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2323: Cannot redeclare exported variable 'func12'.
    
    exports = module.exports = {};
    ~~~~~~~
!!! error TS2631: Cannot assign to '"b"' because it is a namespace.
              ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    exports.func13 = function () { };
    module.exports.func14 = function () { };
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
    exports = module.exports = {};
    ~~~~~~~
!!! error TS2631: Cannot assign to '"b"' because it is a namespace.
              ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    exports.func15 = function () { };
    module.exports.func16 = function () { };
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
    module.exports = exports = {};
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'export='.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
                     ~~~~~~~
!!! error TS2631: Cannot assign to '"b"' because it is a namespace.
    exports.func17 = function () { };
    module.exports.func18 = function () { };
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
    module.exports = {};
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'export='.
    exports.func19 = function () { };
    module.exports.func20 = function () { };
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
    